--- a/index.html
+++ b/index.html
@@ -1,11 +1,120 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-<meta charset="utf-8">
+	<meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+
 	<title>가야금 앙상블 오드리입니다.</title>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-<h1>안녕하세요 오드리입니다.</h1>
+	<header>
+		<div class="blackbar_top">
+			<a href="https://www.youtube.com/channel/UCBMi9otApyW0-45vP5RdIcw"><img class="toplogo" src="image/youtubelogo.png" alt="youtube logo"></a>
+			<a href="https://www.instagram.com/gayageum5drey/"><img class="toplogo" src="image/instagramlogo.png" alt="instagram logo"></a>
+			<a href="https://www.facebook.com/5drey"><img class="toplogo" src="image/facebooklogo.png" alt="facebook logo"></a>
+		</div>
+    	<nav class="navbar navbar-default">
+      		<div class="container">
+        		<div class="navbar-header">
+          			<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
+            			<span class="sr-only">Toggle navigation</span>
+            			<span class="icon-bar"></span>
+	            		<span class="icon-bar"></span>
+	            		<span class="icon-bar"></span>
+	          		</button>
+	          		<img id="logo" src="image/logo.jpg" alt="logo">
+	          		<a href="index.html" id="groupName" class="navbar-brand">가야금 앙상블 오드리</a>
+	        	</div><!--navbar header end-->
 
+	    		<!-- Visible only in mobile -->
+	        	<div id="collapsable-nav" class="collapse navbar-collapse">
+	          		<ul id="nav-list" class="nav navbar-nav navbar-right text-center">
+	            		<li>
+	              			<a href="#">그룹 소개</a>
+	            		</li>
+	            		<li class="dropdown">
+				        	<a class="dropdown-toggle" data-toggle="dropdown" href="#">멤버 소개
+				        	<span class="caret"></span></a>
+				        	<ul class="dropdown-menu">
+				          		<li><a href="#">김다혜</a></li>
+				          		<li><a href="#">김솔</a></li>
+				          		<li><a href="#">김지효</a></li>
+				          		<li><a href="#">박지현</a></li>
+				          		<li><a href="#">오지현</a></li>
+				        	</ul>
+				     	</li>
+	            		<li>
+	              			<a href="#">사진</a>
+	            		</li>
+	            		<li>
+	              			<a href="#">영상</a>
+	            		</li>
+	            		<li>
+	              			<a href="#">스케쥴</a>
+	            		</li>
+	            		<li>
+	              			<a href="#">미디어</a>
+	            		</li>
+	            		<li>
+	              			<a href="#">Contacts</a>
+	            		</li>
+	          		</ul><!-- #nav-list -->
+	        	</div>
+      		</div><!--container div end-->
+    	</nav>
+    </header>
+
+ 	<section class="container">
+ 		<div class="row">
+	 		<div id="jumbotron" class="col-xs-12">
+				<img src="image/5dreyJumbotron.jpg" alt="대문 사진" width="100%;" height="100%">
+			</div>
+			
+			<div class="col-xs-12 col-sm-12 col-md-6">
+				<div id="youtube">
+					<iframe class="youtube_element" src="https://www.youtube.com/embed/aWcsGmJnyD4" frameborder="0" allowfullscreen=""></iframe>
+				</div>
+			</div>
+			<div class="col-xs-6 col-md-6 col-lg-3">
+				<img class="main_element" src="image/onthegrass.jpg" alt="잔디 다섯" width="100%;" height="100%">
+			</div>
+			<div class="col-xs-3">
+				<div class="testbox"></div>
+			</div>
+			<div class="col-xs-3">
+				<div class="testbox"></div>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-xs-12">
+				<img src="image/5dreycharacter.jpg" alt="character pic" width="100%" height="100%">
+			</div>
+		</div>
+	</section>
+
+	<footer class="text-center">
+		<div class="container">
+			<div class="col-xs-12">
+				<p> &copy; 2017 가야금 앙상블 오드리 </p>
+				<p>phone number</p>
+				<p>e-mail</p>
+				<p>address</p>
+			</div>
+		</div>
+	</footer>
+  	<!-- jQuery (Bootstrap JS plugins depend on it) -->
+  	<script src="js/jquery-1.11.3.min.js"></script>
+  	<script src="js/bootstrap.min.js"></script>
+  	<script src="js/script.js"></script>
 </body>
 </html>
