--- a/index.html
+++ b/index.html
@@ -88,11 +88,8 @@
 			<div class="col-xs-6 col-md-6 col-lg-3">
 				<img class="main_element" src="image/onthegrass.jpg" alt="잔디 다섯" width="100%;" height="100%">
 			</div>
-			<div class="col-xs-3">
-				<div class="testbox"></div>
-			</div>
-			<div class="col-xs-3">
-				<div class="testbox"></div>
+			<div class="col-xs-6 col-md-6 col-lg-3">
+				<img class="main_element" src="image/coolpicedited.jpg" alt="cool pic" width="100%" height="100%">
 			</div>
 		</div>
 		<div class="row">
